Bug 99537 - SIDEBAR: Content panel setting not saved between context changes
Summary: SIDEBAR: Content panel setting not saved between context changes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.2.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0 target:5.4.4
Keywords: bibisected, regression
Depends on:
Blocks: Sidebar-Properties Sidebar-UI-UX
  Show dependency treegraph
 
Reported: 2016-04-27 18:00 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-10-19 08:47 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2016-04-27 18:00:13 UTC
Similar to 97398, there is a bug in the sidebar that when you change the opened or closed setting of a content panel, that setting isnt saved after the sidebar refreshes its context.

Steps:
1) open writer
2) close the 'character' content panel in the sidebar
3) draw a shape
4) click off the shape and the 'character' content panel will be open

Regression as this doesnt affect 5.0.5.2.

Version: 5.2.0.0.alpha0+
Build ID: b19ac3c4c6b4a41a1f3acac68b299fd676428a87
CPU Threads: 2; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-04-21_08:41:08
Locale: en-US (en_US.UTF-8)
Comment 1 raal 2016-04-28 09:46:41 UTC
I can confirm with Version: 5.2.0.0.alpha0+; win7
Comment 2 Xisco Faulí 2016-09-12 12:20:04 UTC
Adding keyword 'bibisectRequest'.
Comment 3 Aron Budea 2017-01-06 01:50:11 UTC Comment hidden (bibisection)
Comment 4 Aron Budea 2017-01-06 01:54:42 UTC
Bibisect doesn't identify a unique commit (see previous comment), however this looks suspicious:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=9bd618740ea5da9d5077f755530de56f1e913bea
author	Michael Stahl <mstahl@redhat.com>	2015-12-01 22:59:19 (GMT)
committer	Michael Stahl <mstahl@redhat.com>	2015-12-02 10:13:20 (GMT)

"tdf#96162: sfx2: avoid re-creating existing sidebar Panels"
Comment 6 Yousuf Philips (jay) (retired) 2017-10-17 14:31:47 UTC
*** Bug 113173 has been marked as a duplicate of this bug. ***
Comment 7 Yousuf Philips (jay) (retired) 2017-10-17 14:41:59 UTC
Bubli, Maxim: Any thoughts of this issue? I'm assuming the sidebar API work cause this breakage.
Comment 8 OfficeUser 2017-10-17 14:50:18 UTC
Looks like it is cause by Bug 91806.

@Laurent: May I ask you for support? This one (respectively bug 113173) is a major usability regression for Draw and Impress.major
Comment 9 Commit Notification 2017-10-18 08:06:25 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ce2e94a98f5fc85bef7623a0227b3a95d8093288

tdf#99537 set expand for re-used sidebar panels

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2017-10-19 08:47:29 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=26074f8ffacd817825a6e61d39dc9e7d27b1f3c2&h=libreoffice-5-4

tdf#99537 set expand for re-used sidebar panels

It will be available in 5.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.