tdf#99537 set expand for re-used sidebar panels

When re-using a panel, reset the expand state from the stored
state in the PanelContexDescriptor.

Change-Id: I00851982bbd36cacdc57459bb6e5be9fcc719e81