sfx2/source/sidebar/SidebarController.cxx
@@ -617,6 +617,7 @@ void SidebarController::CreatePanels(const ::rtl::OUString& rDeckId, const Conte
         if (pPanel != nullptr)
         {
             aNewPanels[nWriteIndex] = pPanel;
+            pPanel->SetExpanded( rPanelContexDescriptor.mbIsInitiallyVisible );
             ++nWriteIndex;
         }
         else
